@@ -1,3 +1,7 @@
+2012-12-28	Marzo Sette Torres Junior <marzojr@yahoo.com>
+	* gumps/Gump_manager.cc: Fixing previous fix to not delete gumps when you
+	  want to move them.
+
 2012-12-27	Marzo Sette Torres Junior <marzojr@yahoo.com>
 	* all: Removed ungodly amount of uneeded data copies when passing tiles and
 	  rectangles around by using const references when possible.
